2006-08-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/thbrk/thbrk.c (brk_do): Calculated penalty more accurately by
	measuring distance from recent break pos, rather than the crash pos.
	Also added penalty on recovery failure.

	* src/thbrk/thbrk.c (best_brk_contest): Fixed boolean expression by
	adding parentheses.

2006-08-23  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* libthai.pc.in: Added datrie to Requires.

	* src/thbrk/Makefile.am: Removed old dict before rebuilding.

	* src/thbrk/thbrk.c (th_brk_line): Added implementation.

	* src/thbrk/thbrk.c (brk_do): Be satisfied with terminal state only if
	the following character can begin a word.

	* src/thbrk/thbrk.c (BrkShot, BestBrk, brk_root_pool, brk_do,
	brk_shot_copy, best_brk_new, best_brk_contest): Added penulty
	on crash recovery, and considered it when contesting shots. This can
	prevent long crash shots from showing up as maximally matched.

2006-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	=== begin of datrie_wbrk-branch ===

	* configure.in, src/thbrk/Makefile.am, src/thbrk/thbrk.c,
	+src/thbrk/thbrk.sbm: Replaced old thbrk from cttex with my new
	version written from scratch.

2006-08-22  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Post-release version bump.

2006-08-05  Theppitak Karoonboonyanan <thep@linux.thai.net>

	* NEWS, configure.in:
	Version 0.1.6.

2006-08-05  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Update library version info, according to recent API
	additions.

2006-08-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Disable debug by default.

2006-08-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Enable doxygen by default.

	* configure.in, doc/Makefile.am: Use htmldocdir variable instead of
	pkgdocdir/docdir. Let default behavior install html under html/ subdir.

	* configure.in, Makefile.am: Exclude man/ subdir, and use