@@ -1,5 +1,9 @@
 2006-08-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	* src/thbrk/thbrk.c: s/penulty/penalty/. :-P
+
+2006-08-24  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/thbrk.c (brk_do): Calculated penalty more accurately by
 	measuring distance from recent break pos, rather than the crash pos.
 	Also added penalty on recovery failure.
@@ -975,13 +979,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.3 2006-08-24 01:16:17 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.4 2006-08-24 01:19:00 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.3 2006-08-24 01:16:17 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.4 2006-08-24 01:19:00 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
